add Read/Write Signdata function and move the struct desc to tesi_struct_desc.h

--- a/example/Makefile
+++ b/example/Makefile
@@ -3,9 +3,11 @@ CFLAGS= -g -c -DUSER_MODE
 CC=gcc
 CCP=g++
 
-main: TESI_test  TESI_init TESI_bind_genkey TESI_bind_binddata TESI_bind_unbinddata TESI_clear TESI_AIK_CASign TESI_AIK_GenerateReq TESI_AIK_Activate Tspi_Data_Unbind05
+main: TESI_test  TESI_getpubek TESI_init TESI_bind_genkey TESI_bind_binddata TESI_bind_unbinddata TESI_clear TESI_AIK_CASign TESI_AIK_GenerateReq TESI_AIK_Activate Tspi_Data_Unbind05
 TESI_test: TESI_test.c 
 	$(CC) $(FLAGS) TESI_test TESI_test.c -L/usr/local/lib -L../lib -ltesi -ltspi -lcrypto -lstruct -lcrypto_func
+TESI_getpubek: TESI_getpubek.c 
+	$(CC) $(FLAGS) TESI_getpubek TESI_getpubek.c -L/usr/local/lib -L../lib -ltesi -ltspi -lcrypto -lstruct -lcrypto_func
 TESI_init: TESI_init.c 
 	$(CC) $(FLAGS) TESI_init TESI_init.c -L/usr/local/lib -L../lib -ltesi -ltspi -lcrypto -lstruct -lcrypto_func
 TESI_bind: TESI_bind.c 
