--- a/tesi/Makefile
+++ b/tesi/Makefile
@@ -2,7 +2,7 @@ FLAGS= -g -o
 CFLAGS= -g -c -DUSER_MODE 
 CC=gcc
 CCP=g++
-FUNCOBJ= common.o tesi_certs.o 
+FUNCOBJ= common.o tesi_certs.o key_certify.o
 
 main: ../lib/libtesi.a
 ../lib/libtesi.a: $(FUNCOBJ) ../include/tesi.h	
@@ -12,5 +12,7 @@ common.o: common.c common.h
 	$(CC) $(CFLAGS) common.c
 tesi_certs.o: tesi_certs.c ../include/tesi.h
 	$(CC) $(CFLAGS) tesi_certs.c
+key_certify.o: key_certify.c ../include/tesi.h key_certify.h
+	$(CC) $(CFLAGS) key_certify.c
 clean:
 	rm -f *~ *.o *.a
